NGINX load balancing demonstration in k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-http-app-service
spec:
  selector:
    app: python-http-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
